[tool.poetry]
name = "apihome"
version = "0.1.0"
description = "the tvbs api"
authors = ["bruce"]

[tool.poetry.dependencies]
python = ">=3.7.1"
Flask = "^1.1.2"
Flask-Login = "^0.5.0"
pandas = "^1.2.3"
Flask-Cache = "^0.13.1"
Werkzeug = "0.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
